fixed header background when the header wraps

--- a/public/css/styles.sass
+++ b/public/css/styles.sass
@@ -21,6 +21,7 @@ body {
     background: $primary-color;
     display:block;
     color: $white;
+    overflow:auto;
 
     .right {
         padding-right: 1em;
